# terminal-music-player

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.zh.md  build.sh
.github/workflows/: deploy-website.yml
src/: app.rs  lib.rs  main.rs  player.rs  playlist.rs  stream.rs  ui.rs
tests/: app_test.rs  player_test.rs  playlist_test.rs  stream_test.rs  streaming_decode.rs
website/: index.html
